A lot of changes - actualize dependency versions, added a lot of code and fixes a lot of bugs